@@ -35,15 +35,15 @@ public class ExpenseServiceImpl extends GenericServiceImpl<Expense, Long> implem
 
     @Override
     public List<Expense> getExpensesByEmail(String mail) {
-        return expenseRepository.findByUserEmail(mail);
+        return expenseRepository.findByMembershipUserEmail(mail);
     }
 
     @Override
     public Expense save(Expense entity) {
-        Authentication auth = SecurityContextHolder.getContext().getAuthentication();
-        String email = auth.getName();
-        Optional<User> user = userRepository.findByEmail(email);
-        user.ifPresent(entity::setUser);
+//        Authentication auth = SecurityContextHolder.getContext().getAuthentication();
+//        String email = auth.getName();
+//        Optional<User> user = userRepository.findByEmail(email);
+//        user.ifPresent(entity::setUser);
         if (entity.getCategory() == null) {
             Category defaultCategory = categoryRepository.findById(1L)
                     .orElseGet(() -> categoryRepository.save(new Category()));
@@ -72,7 +72,7 @@ public class ExpenseServiceImpl extends GenericServiceImpl<Expense, Long> implem
     @Override
     public ExpInfo getExpInfo(String group) {
         List<Expense> groupExpenses = getExpensesForGroup(group);
-        List<Expense> userExpenses = expenseRepository.findByUserEmail(SecurityContextHolder.getContext().getAuthentication().getName());
+        List<Expense> userExpenses = expenseRepository.findByMembershipUserEmail(SecurityContextHolder.getContext().getAuthentication().getName());
         double groupSum = groupExpenses.stream().mapToDouble(Expense::getPrice).sum();
         double userSum = userExpenses.stream().mapToDouble(Expense::getPrice).sum();
         return new ExpInfo(userSum, groupSum);
@@ -171,7 +171,7 @@ public class ExpenseServiceImpl extends GenericServiceImpl<Expense, Long> implem
     }
 
     private String getGroupName() {
-        return getAllGroups().getFirst().getName();
+        return getAllGroups().get(0).getName();
     }
 
     private List<BaseGroup> getAllGroups() {
